--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,7 +6,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter=""
+exclude_filter="*.blend, *.ora, *.txt, *.md, LICENSE, *.blend1, .gitignore, .idea/*, *.png~"
 export_path="../SpExports/Splunk.html"
 script_export_mode=1
 script_encryption_key=""
