--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,7 @@ platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.ogv"
 exclude_filter="*.blend, *.ora, *.txt, *.md, LICENSE, *.blend1, .gitignore, .idea/*, *.png~"
 export_path="../SpExports/Splunk.html"
 script_export_mode=1
@@ -31,4 +31,4 @@ progressive_web_app/orientation=0
 progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
 progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color( 0, 0, 0, 1 )
+progressive_web_app/background_color=Color( 1, 1, 1, 1 )
