--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,24 +1,28 @@
 [preset.0]
 
-name="HTML5"
-platform="HTML5"
+name="Web"
+platform="Web"
 runnable=true
+dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter="*.ogv"
-exclude_filter="*.blend, *.ora, *.txt, *.md, LICENSE, *.blend1, .gitignore, .idea/*, *.png~"
-export_path="../SpExports/Splunk.html"
-script_export_mode=1
+include_filter=""
+exclude_filter=""
+export_path=""
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
 script_encryption_key=""
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
-variant/export_type=0
+variant/extensions_support=false
 vram_texture_compression/for_desktop=true
-vram_texture_compression/for_mobile=true
-html/export_icon=false
+vram_texture_compression/for_mobile=false
+html/export_icon=true
 html/custom_html_shell=""
 html/head_include=""
 html/canvas_resize_policy=2
@@ -31,4 +35,4 @@ progressive_web_app/orientation=0
 progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
 progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color( 1, 1, 1, 1 )
+progressive_web_app/background_color=Color(0, 0, 0, 1)
